<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Lib Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add_loan">+Add Loan</string>
    <string name="title_activity_add_loan">Add Loan</string>
    <string name="title_activity_alarm_receiver">Alarm</string>
    <string name="pick_date">Pick Date</string>
    <string name="change_date">Change Date</string>
    <string name="replace_in">Replace in </string>
    <string name="days">days </string>
    <string name="reminder_saved">Loan Saved </string>
    <string name="reminder_deleted">Loan Deleted </string>
    <string name="not_null">No field can be null </string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>
    <string name="text_field_book_name">Book Name</string>
    <string name="text_field_library_name">Library Name</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="alert">Whoops, it seems you have a book to return today!</string>

</resources>
