<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddLoan" >

    <EditText
        android:id="@+id/book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:hint="@string/text_field_book_name"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <AutoCompleteTextView
        android:id="@+id/library_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/book_name"
        android:layout_marginTop="20dp"
        android:hint="@string/text_field_library_name"
        android:ems="10" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/button_save"
        android:onClick="save" />

    <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/button_delete"
        android:onClick="delete" />

    <TextView
        android:id="@+id/replace_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/replace_n_days"
        android:layout_alignBottom="@+id/replace_n_days"
        android:layout_alignLeft="@+id/library_name"
        android:text="@string/replace_in"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_delete"
        android:layout_alignBottom="@+id/button_delete"
        android:layout_centerHorizontal="true"
        android:text="@string/button_cancel"
        android:onClick="cancel" />

    <TextView
        android:id="@+id/replace_n_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/replace_in"
        android:text="NN"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/replace_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seek_days"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/replace_n_days"
        android:text="@string/days"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/replace_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/seek_days"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/replace_days"
        android:text="(dd-MM-yyyy)"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <SeekBar
        android:id="@+id/seek_days"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/replace_in"
        android:layout_below="@+id/replace_in"
        android:layout_marginTop="20dp" />

</RelativeLayout>
